[gd_scene load_steps=3 format=2]

[ext_resource path="res://customer/Order.gd" type="Script" id=1]
[ext_resource path="res://Interface/theme/default_theme.tres" type="Theme" id=2]

[node name="Order" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 9.0
margin_right = 590.0
margin_bottom = 60.0
rect_min_size = Vector2( 340, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="Control" type="Control" parent="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 260.0
margin_bottom = 51.0
rect_min_size = Vector2( 260, 35 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="OrderName" type="Label" parent="HBoxContainer/Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_right = 264.0
margin_bottom = 50.0
rect_min_size = Vector2( 260, 35 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Order Name"
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Theme", "custom_fonts" ]

[node name="TimerLabel" type="Label" parent="HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 264.0
margin_top = 18.0
margin_right = 296.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Time"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="CheckBox" type="CheckBox" parent="HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_right = 324.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
_sections_unfolded = [ "Margin" ]

[node name="Timer" type="Timer" parent="HBoxContainer" index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Panel" type="Panel" parent="." index="1"]

modulate = Color( 0, 0, 0, 0.38 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
rect_min_size = Vector2( 340, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin", "Patch Margin", "Rect", "Visibility" ]

[connection signal="timeout" from="HBoxContainer/Timer" to="." method="_on_Timer_timeout"]


